2000-12-08  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm: (_unsubscribe) Add "farewell" mode, which
	causes the farewell file to be mailed to each address that
	is removed from the list.

2000-12-08  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (_list_config_set): When addr_xforms changes,
	store the new value in the address parser.

	* lib/Mj/Config.pm (set): Return the parsed data, if there is any,
	on a successful set.

2000-12-07  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/CommandProps.pm: Make %actions the hash of all supported
	actions along with their parameters.  Make %generic_actions a hash
	of the actions supported by most commands.  Replace %actions with
	%generic_actions in {access}{actions} portion of command
	descriptions.

	* lib/Mj/BounceHandler.pm (handle_bounce_user): Fix oops in bounce
	percentage display.

	* lib/Mj/Resend.pm (_within_limits): 
	* lib/Mj/List.pm (describe_class): 
	* lib/Mj/Format.pm (digest):
	Import time_to_str from Mj::Util and call it instead of
	List::_time_to_str.

	* lib/Majordomo.pm (_report): 
	* lib/Mj/Parser.pm (parse_part): 
	* lib/Mj/List.pm (make_setting): 
	* lib/Mj/Config.pm (parse_limits): 
	* lib/Mj/Archive.pm (expand_range): 
	* lib/Mj/Access.pm (_a_delay):
	Import str_to_time from Mj::Util and call it instead of
	List::_str_to_time.

	* lib/Mj/Util.pm: Add str_to_time, time_to_str, and
	_str_to_time_dm, and export the first two.
	(process_rule): Call str_to_time instead of
	Mj::List::_str_to_time.

	* lib/Mj/List.pm: Remove _str_to_time, _str_to_time_dm, and
	_time_to_str.

2000-12-07  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (dispatch)  Alter mode checking to
	give an error instead of silently ignoring invalid punctuation.
	(_createlist)  Convert the aliases setting from flags to
	enumerated format if necessary.

	* lib/Mj/Access.pm:  (list_access_check)  The data used to 
	check time constraints on access rules are now a list